# jellyfin_python_api

./: .gitignore  README.md  generate_api.sh  generate_config.yaml  pyproject.toml  test.py
src/jellyfin_api_lib/: __init__.py  client.py  extra_clients.py  types.py
src/jellyfin_api_lib/models/: __init__.py  access_schedule.py  activity_log_entry.py  activity_log_entry_query_result.py  add_virtual_folder_dto.py  admin_notification_dto.py  album_info.py  album_info_artist_provider_ids.py  album_info_provider_ids_type_0.py  album_info_remote_search_query.py  all_theme_media_result.py  artist_info.py  artist_info_provider_ids_type_0.py  artist_info_remote_search_query.py  authenticate_user_by_name.py  authentication_info.py  authentication_info_query_result.py  authentication_result.py  base_item.py  base_item_dto.py  base_item_dto_image_blur_hashes_type_0.py  base_item_dto_image_blur_hashes_type_0_art.py  base_item_dto_image_blur_hashes_type_0_backdrop.py  base_item_dto_image_blur_hashes_type_0_banner.py  base_item_dto_image_blur_hashes_type_0_box.py  base_item_dto_image_blur_hashes_type_0_box_rear.py  base_item_dto_image_blur_hashes_type_0_chapter.py  base_item_dto_image_blur_hashes_type_0_disc.py  base_item_dto_image_blur_hashes_type_0_logo.py  base_item_dto_image_blur_hashes_type_0_menu.py  base_item_dto_image_blur_hashes_type_0_primary.py  base_item_dto_image_blur_hashes_type_0_profile.py  base_item_dto_image_blur_hashes_type_0_screenshot.py  base_item_dto_image_blur_hashes_type_0_thumb.py  (+241 more)
tests/: conftest.py  test_api_keys.py  test_library.py  test_setup.py
(+380 files in other folders)
